compilers Lab/lab 2/evaluation_folder_assign2_publish/Testcases/fail/assignment2Fail2.java
class assignment2Fail2
{
	public static void main(String []args)
	{
		System.out.println(new t1().foo(10, true, 10));
	}
}

class t1
{
	t1 tx;
	
	int foo(int num, boolean cond, int varb)
	{
		int x;
		boolean flag;
		flag = a < (true & false);
		x = 5;
		tx.foo(num, varb, cond);
		return 0;
	}
}
